--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "react-router-dom": "6.2.2",
         "react-scripts": "5.0.0",
         "react-swipeable": "6.2.0",
+        "react-table": "7.7.0",
         "redux-logger": "4.0.0",
         "styled-components": "5.3.3",
         "stylis": "4.0.13",
