--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
         "node": ">=14.0.0",
         "npm": ">=7.0.0"
     },
+    "homepage": "/GD",
     "browserslist": {
         "production": [
             ">0.2%",
